--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ members = [
 ]
 
 [package]
-name = "xim"
+name = "zed-xim"
 description = "XIM protocol parser, handler"
-version = "0.4.0"
+version = "0.4.0-zed"
 authors = ["Riey <creeper844@gmail.com>"]
 repository = "https://github.com/Riey/xim-rs"
 documentation = "https://docs.rs/xim"
